--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/notice.png" alt="Notice Bulletin profile pic" class="rounded-circle">
+                     		<img src="Resources/notice.png" alt="Notice Bulletin profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -80,7 +80,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/dad.png" alt="Dad profile pic" class="rounded-circle">
+                     		<img src="Resources/dad.png" alt="Dad profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -96,7 +96,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/edward.png" alt="Edward profile pic" class="rounded-circle">
+                     		<img src="Resources/edward.png" alt="Edward profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -112,7 +112,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/mom.png" alt="Mom profile pic" class="rounded-circle">
+                     		<img src="Resources/mom.png" alt="Mom profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -128,7 +128,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/amit.png" alt="Amit profile pic" class="rounded-circle">
+                     		<img src="Resources/amit.png" alt="Amit profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -144,7 +144,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/cse.png" alt="NIT CSE 2K17 profile pic" class="rounded-circle">
+                     		<img src="Resources/cse.png" alt="NIT CSE 2K17 profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -160,7 +160,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/sanay.png" alt="Sanay sir profile pic" class="rounded-circle">
+                     		<img src="Resources/sanay.png" alt="Sanay sir profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -176,7 +176,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/john.png" alt="John profile pic" class="rounded-circle">
+                     		<img src="Resources/john.png" alt="John profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -192,7 +192,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/errica.png" alt="Errica profile pic" class="rounded-circle">
+                     		<img src="Resources/errica.png" alt="Errica profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -208,7 +208,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/uncle.png" alt="Uncle profile pic" class="rounded-circle">
+                     		<img src="Resources/uncle.png" alt="Uncle profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -224,7 +224,7 @@
 				  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/kunal.png" alt="Kunal profile pic" class="rounded-circle">
+                     		<img src="Resources/kunal.png" alt="Kunal profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -240,7 +240,7 @@
 				   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start ">
                      <div class="row">
                      	<div class="col-3">
-                     		<img src="../Resources/wilson.png" alt="Wilson profile pic" class="rounded-circle">
+                     		<img src="Resources/wilson.png" alt="Wilson profile pic" class="rounded-circle">
                      	</div>
                      	<div class="col-9">
                      		<div class="d-flex w-100 justify-content-between">
@@ -270,7 +270,7 @@
                             
                             <h3 class="card-text" > Connect with your friends and family</h3>
 
-                            <img class="card-img-bottom" src="../Resources/people.jpg" alt="People connected ">
+                            <img class="card-img-bottom" src="Resources/people.jpg" alt="People connected ">
                             
                         </div>
             </div>
